crates/cubecl-core/tests/error/return_value.stderr
error: Only void return is supported.
 --> tests/error/return_value.rs:7:9
  |
7 |         return x;
  |         ^^^^^^
